projects/compiler/test/typechecker/indexing/array_error_idx_nullable.out
Error at %FILE_NAME%:3:5
Type mismatch
  |  arr[i]
         ^
Expected: Int
but instead found: Int?
